css spacing fix

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 }
 
 .box {
-    padding: 3rem .5rem;
+    padding: 3rem 2rem;
 }
 
 @media screen and (min-width:800px) {
